<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="_0_00">$0.00</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="e_g_2">E.g. 2</string>
    <string name="togglebuttonsvs">ToggleButton</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="togglebuttongst">ToggleButton</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="e_g_10">E.g. 10%</string>
    <string name="split">SPLIT</string>
    <string name="reset">Reset</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
</resources>