<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_0_00"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_g_2"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSVS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/editTextDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_g_10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/RadioGroupPayBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cash" />

            <RadioButton
                android:id="@+id/radioButtonPayNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PayNow" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Bill: $"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textViewBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</LinearLayout>